--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,15 @@ body {
 
   .sections {
     display: none;
-    top: 0;
+    top: 57px;
     left: 100%;
     transition: left 0.8s, visibility 0.8s, opacity 0.4s;
     flex-direction: column;
     align-items: flex-start;
+    background-image: url("./assets/left_pro3.svg"), url("./assets/left_pro3.svg");
+    background-repeat: no-repeat;
+    background-position: top right, bottom left;
+    background-size: 25%;
   }
 
   .intro {
@@ -45,7 +49,8 @@ body {
   }
 
   .hamb {
-    position: fixed;
+    position: relative;
+    margin-bottom: 20px;
   }
 
   .active {
@@ -55,7 +60,6 @@ body {
     align-content: center;
     align-items: center;
     background-color: #e5e5e5;
-    filter: blur(1px);
     width: 100%;
     left: 0;
     height: 610px;
@@ -67,10 +71,10 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 35px;
-    filter: blur(1px);
     width: 100%;
     left: 0;
     height: 610px;
+    text-decoration: none;
   }
 
   h1 {
