added the popup window

--- a/styles.css
+++ b/styles.css
@@ -472,11 +472,10 @@ body {
     background-repeat: no-repeat;
   }
 
-  #projects h2 {
+  .proh2 {
     transform: rotate(-90deg);
     padding-left: 90px;
     padding-top: 70px;
-    background-image: url("");
   }
 
   .project-card-info {
@@ -711,4 +710,79 @@ body {
     flex-direction: row;
     justify-content: space-between;
   }
+
+/* Popup styling */
+
+  .pop-window {
+    position: absolute;
+    width: 90%;
+    height: 1711px;
+    left: 70px;
+    top: 70px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+    color: #1a2236;
+  }
+  
+  .popup {
+    max-width: 80%;
+    max-height: 80%;
+    overflow-y: auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .popup h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  
+  .popup p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+  
+  .popup .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .popup .links {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .popup .links a {
+    margin: 0 10px;
+    font-size: 1.2rem;
+  }
+  
+  .popup .skills {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .popup .skills ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .popup .skills ul li {
+    margin-right: 10px;
+    font-size: 1.2rem;
+  }
+  
+  .popup .skills ul li:last-child {
+    margin-right: 0;
+  }
+  
 }
