--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,151 @@ body {
     flex-direction: row;
     justify-content: space-between;
   }
+
+  /* Popup styling */
+
+  .pop-window {
+    display: none;
+  }
+
+  .proj-lock {
+    display: none;
+  }
+
+  .active-pop {
+    position: absolute;
+    width: 100%;
+    height: 1281px;
+    left: 10px;
+    top: 125vh;
+    background: #e5e5e5;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+    color: #1a2236;
+  }
+
+  .close-button {
+    float: right;
+    margin-bottom: 50px;
+    margin-right: 30px;
+    background-color: transparent;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+
+  .close-button:hover {
+    color: #f00;
+  }
+
+  .pop-title {
+    text-align: center;
+    padding-top: 70px;
+  }
+
+  .pop-skills {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+  }
+
+  .pop-skills li {
+    border: 1px solid black;
+    margin: 18px;
+  }
+
+  .main-img-cont {
+    display: flex;
+    width: 93%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .pop-main-img {
+    padding-left: 10%;
+    width: 100%;
+  }
+
+  .alt-img-cont {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .all-pop-proj {
+    size: 2%;
+  }
+
+  .img1,
+  .img2,
+  .img3,
+  .img4,
+  .img5,
+  .img6 {
+    width: 100%;
+  }
+
+  .img5,
+  .img6 {
+    display: none;
+  }
+
+  .pop-details {
+    text-align: center;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 15%;
+  }
+
+  .pop-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+  }
+
+  .live-btn {
+    margin-right: 20%;
+    margin-top: 3%;
+    padding-top: 8px;
+    padding-left: 18px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #fff;
+    text-decoration: none;
+    color: #000;
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+  }
+
+  .source-btn {
+    margin-right: 20%;
+    margin-top: 13%;
+    padding-top: 8px;
+    padding-left: 18px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #000;
+    text-decoration: none;
+    color: #fff;
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+  }
+
+  .navigation-links {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 701px) {
@@ -464,7 +609,7 @@ body {
     padding-top: 50px;
   }
 
-  #projects {
+  .projects-list {
     display: grid;
     grid-template-columns: auto auto;
     background-image: url("./assets/image-geometry_2.png"), url("./assets/image-geometry_3.png"), url("./assets/image-geometry_5.png");
@@ -474,8 +619,8 @@ body {
 
   .proh2 {
     transform: rotate(-90deg);
-    padding-left: 90px;
-    padding-top: 70px;
+    padding-left: 200px;
+    padding-top: 40px;
   }
 
   .project-card-info {
@@ -542,8 +687,12 @@ body {
     height: 50px;
   }
 
-  .cards-img img {
+  .cards-img {
     width: 100%;
+  }
+
+  .mini-card {
+    width: 60%;
   }
 
   .cv-btn {
@@ -714,74 +863,138 @@ body {
   /* Popup styling */
 
   .pop-window {
+    display: none;
+  }
+
+  .active-pop {
     position: absolute;
     width: 90%;
-    height: 1711px;
-    left: 70px;
-    top: 70px;
-    background: #fff;
+    height: 2111px;
+    left: 90px;
+    top: 150vh;
+    background: #e5e5e5;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
     color: #1a2236;
   }
 
-  .popup {
-    max-width: 80%;
-    max-height: 80%;
-    overflow-y: auto;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    text-align: center;
-  }
-
-  .popup h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-
-  .popup p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-  }
-
-  .popup .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 1.5rem;
+  .close-button {
+    float: right;
+    margin-bottom: 50px;
+    margin-right: 30px;
+    margin-top: 20px;
+    background-color: transparent;
+    border: none;
+    color: #333;
     cursor: pointer;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
 
-  .popup .links {
+  .close-button:hover {
+    color: #f00;
+  }
+
+  .pop-title {
+    text-align: center;
+    padding-top: 70px;
+  }
+
+  .pop-skills {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+  }
+
+  .pop-skills li {
+    border: 1px solid black;
+    margin: 18px;
+  }
+
+  .main-img-cont {
+    display: flex;
+    width: 93%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .pop-main-img {
+    padding-left: 10%;
+    width: 100%;
+  }
+
+  .all-img-cont {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-shrink: inherit;
+    margin-top: 50px;
+  }
+
+  .pop-details {
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 5%;
+  }
+
+  .pop-links {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    align-items: center;
   }
 
-  .popup .links a {
-    margin: 0 10px;
-    font-size: 1.2rem;
+  .live-btn {
+    margin-right: 20%;
+    margin-top: 3%;
+    padding-top: 8px;
+    padding-left: 18px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #fff;
+    text-decoration: none;
+    color: #000;
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
   }
 
-  .popup .skills {
+  .source-btn {
+    margin-right: 20%;
+    margin-top: 3%;
+    padding-top: 8px;
+    padding-left: 18px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background: #000;
+    text-decoration: none;
+    color: #fff;
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+  }
+
+  .navigation-links {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    align-items: center;
   }
 
-  .popup .skills ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  .popup .skills ul li {
-    margin-right: 10px;
-    font-size: 1.2rem;
-  }
-
-  .popup .skills ul li:last-child {
-    margin-right: 0;
+  .nextprev {
+    margin-right: 20%;
+    margin-top: 3%;
+    padding-top: 8px;
+    padding-left: 18px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #000;
   }
 }
