--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ body {
   .active-pop {
     position: absolute;
     width: 100%;
-    height: 1281px;
+    height: 1481px;
     left: 10px;
     top: 125vh;
     background: #e5e5e5;
@@ -458,10 +458,18 @@ body {
   }
 
   .pop-details {
-    text-align: center;
     margin-left: 3%;
     margin-right: 3%;
     margin-top: 15%;
+    width: 291px;
+    height: 432px;
+    left: 11px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    color: #1a2236;
   }
 
   .pop-links {
@@ -469,41 +477,28 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 100px;
   }
 
-  .live-btn {
+  .pop-links a {
     margin-right: 20%;
     margin-top: 3%;
+    margin-bottom: 30px;
     padding-top: 8px;
     padding-left: 18px;
-    border: 1px solid black;
+    border: 1px solid #1a2236;
     border-radius: 5px;
     background: #fff;
     text-decoration: none;
-    color: #000;
     width: 200px;
     height: 50px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
     font-size: 18px;
-    font-weight: 400;
     line-height: 27px;
-  }
-
-  .source-btn {
-    margin-right: 20%;
-    margin-top: 13%;
-    padding-top: 8px;
-    padding-left: 18px;
-    border: 1px solid black;
-    border-radius: 5px;
-    background: #000;
-    text-decoration: none;
-    color: #fff;
-    width: 200px;
-    height: 50px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 27px;
+    text-align: center;
+    color: #1a2236;
   }
 
   .navigation-links {
@@ -933,7 +928,7 @@ body {
     flex-shrink: inherit;
     margin-top: 50px;
   }
-  
+
   .all-pop-proj {
     width: 16.37%;
   }
@@ -949,7 +944,7 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
-    color: #1A2236;
+    color: #1a2236;
   }
 
   .pop-links {
@@ -984,7 +979,7 @@ body {
     padding-left: 10px;
     border: 1px solid black;
     border-radius: 5px;
-    background: #1A2236;
+    background: #1a2236;
     text-decoration: none;
     color: #fff;
     width: 200px;
